--- a/app/(private routes)/notes/filter/layout.module.css
+++ b/app/(private routes)/notes/filter/layout.module.css
@@ -1,7 +1,9 @@
 .container {
   display: flex;
   flex-direction: row;
-  height: 100%;
+  /* height: 100%; */
+  flex: 1;
+  min-height: 0;
 }
 
 .sidebar {
@@ -11,7 +13,7 @@
   padding: 16px;
   display: flex;
   flex-direction: column;
-  min-height: 100%;
+  /* min-height: 100%; */
   border-right: 1px solid #ddd;
 }
 
